--- a/views/admin/report/view_report.ejs
+++ b/views/admin/report/view_report.ejs
@@ -48,6 +48,7 @@
               <th>Nama</th>
               <th>Departement</th>
               <th>Tanggal</th>
+              <th>Approve</th>
               <th>View</th>
             </tr>
             </thead>
@@ -58,6 +59,7 @@
               <td><%= activity[i].fullname %></td>
               <td><%= activity[i].department %></td>
               <td><%= activity[i].activityDate.toLocaleString().split(',')[0] %></td>
+              <td><%= activity[i].approve %></td>
               <td>
                 <a href="/report/details/<%= activity[i]._id %>" class="btn btn-success btn-sm"><i class="far fa-eye"></i></a>
               </td>
