--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -31,6 +31,8 @@
 <script src="/style/plugins/datatables-buttons/js/buttons.html5.min.js"></script>
 <script src="/style/plugins/datatables-buttons/js/buttons.print.min.js"></script>
 <script src="/style/plugins/datatables-buttons/js/buttons.colVis.min.js"></script>
+<!-- Select2 -->
+<script src="/style/plugins/select2/js/select2.full.min.js"></script>
 <!-- AdminLTE App -->
 <script src="/style/dist/js/adminlte.min.js"></script>
 <!-- Page specific script -->
