--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -13,6 +13,9 @@
   <link rel="stylesheet" href="/style/plugins/datatables-bs4/css/dataTables.bootstrap4.min.css">
   <link rel="stylesheet" href="/style/plugins/datatables-responsive/css/responsive.bootstrap4.min.css">
   <link rel="stylesheet" href="/style/plugins/datatables-buttons/css/buttons.bootstrap4.min.css">
+  <!-- Select2 -->
+  <link rel="stylesheet" href="/style/plugins/select2/css/select2.min.css">
+  <link rel="stylesheet" href="/style/plugins/select2-bootstrap4-theme/select2-bootstrap4.min.css">
   <!-- Theme style -->
   <link rel="stylesheet" href="/style/dist/css/adminlte.min.css">
 </head>
