--- a/views/admin/report/details/view_details.ejs
+++ b/views/admin/report/details/view_details.ejs
@@ -28,14 +28,9 @@
       <div class="row">
         <div class="col-md-3">
 
-          <!-- Profile Image -->
+          <!-- Profile -->
           <div class="card card-primary card-outline">
             <div class="card-body box-profile">
-              <div class="text-center">
-                <img class="profile-user-img img-fluid img-circle"
-                     src="/style/dist/img/user4-128x128.jpg"
-                     alt="User profile picture">
-              </div>
 
               <h3 class="profile-username text-center"> <%= user.fullname %> </h3>
 
@@ -154,7 +149,7 @@
                 </div>
 
                 <div class="tab-pane" id="Review">
-                  <form class="form-horizontal" action="" method="post">
+                  <form class="form-horizontal" action="/report/details/<%= activity._id %>?_method=PUT" method="post">
                     <div class="form-group row">
                       <label for="remaks" class="col-sm-2 col-form-label">Remaks</label>
                       <div class="col-sm-10">
