--- a/views/admin/activity/add.ejs
+++ b/views/admin/activity/add.ejs
@@ -65,7 +65,7 @@
                                     </div>
                                     <div class="form-group">
                                       <label for="Tanggal">Tanggal</label>
-                                      <input type="date" id="Tanggal" name="activityDate" class="form-control">
+                                      <input id="Tanggal" name="activityDate" value="<%= Date(`YYYY-MM-DD`) %>" class="form-control">
                                     </div>
                                     <div class="form-group">
                                       <label for="inputDescription">Project Description</label>
@@ -116,6 +116,10 @@
                                     <div class="form-group">
                                       <label for="Position">Position</label>
                                       <input type="text" id="Position" name="position" class="form-control">
+                                    </div>
+                                    <div class="form-group">
+                                      <label for="Company">Company</label>
+                                      <input type="text" id="Company" name="company" class="form-control">
                                     </div>
                                     <div class="form-group">
                                       <label for="phone">Phone Number</label>
