--- a/views/admin/report/details/view_details.ejs
+++ b/views/admin/report/details/view_details.ejs
@@ -157,7 +157,7 @@
                       </div>
                     </div>
                     <div class="form-group row">
-                      <label for="approve" class="col-sm-2 col-form-label">Approve</label>
+                      <label for="approve" class="col-sm-2 col-form-label">Rating</label>
                       <div class="col-sm-10">
                         <select id="approve" name="approve" class="form-control custom-select">
                           <option value="Proses">Proses</option>
