--- a/views/admin/activity/add.ejs
+++ b/views/admin/activity/add.ejs
@@ -90,7 +90,7 @@
                                       <input type="text" id="case" name="cases" class="form-control">
                                     </div>
                                     <div class="form-group">
-                                      <label for="actionPlan">Action Plan</label>
+                                      <label for="actionPlan">Action</label>
                                       <textarea id="actionPlan" class="form-control" name="action" rows="4"></textarea>
                                     </div>
                                     <div class="form-group">
