--- a/views/partials/sidebar.ejs
+++ b/views/partials/sidebar.ejs
@@ -108,7 +108,7 @@
             <a href="#" class="nav-link">
               <i class="nav-icon fas fa-user"></i>
               <p>
-                Users
+                Data Master
                 <i class="fas fa-angle-left right"></i>
               </p>
             </a>
@@ -116,7 +116,15 @@
               <li class="nav-item">
                 <a href="/users" class="nav-link">
                   <i class="far fa-circle nav-icon"></i>
-                  <p>Data</p>
+                  <p>Users</p>
+                </a>
+              </li>
+            </ul>
+            <ul class="nav nav-treeview">
+              <li class="nav-item">
+                <a href="/Job" class="nav-link">
+                  <i class="far fa-circle nav-icon"></i>
+                  <p>Job Position</p>
                 </a>
               </li>
             </ul>
