--- a/views/admin/activity/add.ejs
+++ b/views/admin/activity/add.ejs
@@ -111,7 +111,7 @@
                                       <select id="inputStatus" class="form-control custom-select" name="status">
                                         <option selected disabled>Select one</option>
                                         <option value="Pending">Pending</option>
-                                          <input type="text" name="target" placeholder="target pekerjaan">
+                                          <input type="date" name="target" placeholder="target pekerjaan">
                                         <option value="Finish">Finish</option>
                                       </select>
                                     </div>
